RESOLVED FIXED67508
The private browsing state isn't saved when it changes
https://bugs.webkit.org/show_bug.cgi?id=67508
Summary The private browsing state isn't saved when it changes
Anders Carlsson
Reported 2011-09-02 11:07:55 PDT
The private browsing state isn't saved when it changes
Attachments
Patch (3.14 KB, patch)
2011-09-02 11:11 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-09-02 11:11:00 PDT
Anders Carlsson
Comment 2 2011-09-02 11:16:23 PDT
Note You need to log in before you can comment on or make changes to this bug.