The private browsing state isn't saved when it changes https://bugs.webkit.org/show_bug.cgi?id=67508

Reviewed by Sam Weinig.

Source/WebKit2:

Store the new private browsing state so subsequent queries for it
will return the right value.

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::privateBrowsingStateChanged):

LayoutTests:

Unskip private browsing plug-in tests, since WebKitTestRunner
now has layoutTestController.setPopupBlockingEnabled.

* platform/wk2/Skipped:


Canonical link: https://commits.webkit.org/83344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94435 268f45cc-cd09-0410-ab3c-d52691b4dbfc